--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -61,6 +61,14 @@ header {
     }
 }
 
+/**
+ *  The scrolling content below the header
+ */
+
+section {
+    background-color: $cBg;
+}
+
 article {
     height: auto;
     padding-top: 7rem;
@@ -83,6 +91,67 @@ article {
     @media #{$large-up} {
         width: $container-width;
         padding: 0;
+    }
+}
+
+
+
+
+/* Scroll arrow
+   ------------------------------------------------------------------ */
+
+#scroll-arrow {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+
+    a {
+        display: block;
+        margin: 0;
+        padding-top: 2rem;
+        text-align: center;
+        text-decoration: none;
+    }
+
+    h3 {
+        margin: 0 auto 0.25rem;
+        font-family: join($fontMed, $body-font-family);
+        text-align: center;
+        color: lighten($cText,40%);
+        letter-spacing: 0;
+        opacity: 0;
+
+        @include scut-rem-fallback(15);
+        @media #{$medium-only} { @include scut-rem-fallback(15); }
+        @media #{$small-only}  {
+            @include scut-rem-fallback(15);
+            opacity: 1;
+        }
+
+    }
+
+    img {
+        // margin-right: 0.5rem;
+        margin: 0 auto;
+    }
+
+    &:hover h3 {
+        opacity: 1;
+        transition: all 0.3s ease-out;
+    }
+}
+
+/**
+ * Move article container away
+ * from #scroll-arrow a.link
+ */
+
+#scroll-start {
+    padding-top: 3rem;
+    @media #{$small-only}  {
+        padding-top: 0;
     }
 }
 
@@ -138,62 +207,6 @@ article {
             margin-top: 0;
         }
     }
-}
-
-
-
-/* Scroll arrow
-   ------------------------------------------------------------------ */
-
-#scroll-arrow {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-
-    a {
-        display: block;
-        margin: 0;
-        padding-top: 2rem;
-        text-align: center;
-        text-decoration: none;
-    }
-
-    h3 {
-        margin: 0 auto 0.25rem;
-        font-family: join($fontMed, $body-font-family);
-        text-align: center;
-        color: lighten($cText,40%);
-        letter-spacing: 0;
-        opacity: 0;
-
-        @include scut-rem-fallback(15);
-        @media #{$medium-only} { @include scut-rem-fallback(15); }
-        @media #{$small-only}  {
-            @include scut-rem-fallback(15);
-            opacity: 1;
-        }
-
-    }
-
-    img {
-        // margin-right: 0.5rem;
-        margin: 0 auto;
-    }
-
-    &:hover h3 {
-        opacity: 1;
-        transition: all 0.3s ease-out;
-    }
-}
-
-/**
- * Move article container away from #scroll-arrow a.link
- */
-
-#scroll-start {
-    padding-top: 3rem;
 }
 
 
